# synology-download-center-telegram-bot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
spk/: INFO
spk/WIZARD_UIFILES/: install_uifile
spk/scripts/: postinst  postupgrade  preupgrade  start-stop-status
src/: config.rs  main.rs  notifier.rs  ui.html  web.rs
src/synology/: dsm_api.rs  mod.rs  watcher.rs
src/telegram/: bot.rs  handlers.rs
ui/: config  package-lock.json  package.json  redirect.html  webpack.config.js
ui/dsm/: config
ui/src/: App.vue  api.js  main.js
ui/src/components/: ActivityLog.vue  SettingsForm.vue  StatusPanel.vue
webapi/: SynoTelegramBot.api  api.cgi
